# langchain

./: README.md  pyproject.toml
classic/: classification.py
comm/: comm.py  utils.py
sql/: sql_foreign_key.py  sql_parser.py  sql_query.py
sql/data/: 345创建表的schema.txt  特殊的sql.txt  表外键关系.txt
test/: test1.py  test_sqlchain.py  test_sqlchain2.py  test_sqlchain3.py
test/code/: test_openai.py
test/embedding/: test_embedding.py
test/model/: transformer.py
vanna/: vanna_first.py
web/: langserve.py
